--- a/charts/datalab/Chart.yaml
+++ b/charts/datalab/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -34,4 +34,20 @@ dependencies:
   - name: onyxia
     version: 2.0.0
     repository: https://inseefrlab.github.io/helm-charts
+  - name: vault
+    version: 0.18.0
+    repository: https://helm.releases.hashicorp.com
+  - name: prometheus
+    version: 15.0.1
+    repository: https://prometheus-community.github.io/helm-charts
+  - name: grafana
+    version: 6.17.10
+    repository: https://grafana.github.io/helm-charts
+  - name: postgresql
+    version: 10.13.8
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
+  - name: ckan
+    version: 1.0.1
+    repository: https://keitaro-charts.storage.googleapis.com
 
