--- a/charts/datalab/Chart.yaml
+++ b/charts/datalab/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.3.0
+version: 0.4.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -50,4 +50,9 @@ dependencies:
   - name: ckan
     version: 1.0.1
     repository: https://keitaro-charts.storage.googleapis.com
+    condition: ckan.enabled
+  - name: superset
+    version: 0.5.4
+    repository: https://apache.github.io/superset
+
 
