--- a/charts/datalab/templates/postgres-init-script-secret.yaml
+++ b/charts/datalab/templates/postgres-init-script-secret.yaml
@@ -27,5 +27,9 @@ stringData:
         CREATE DATABASE datastore_default WITH ENCODING 'UTF8' LC_COLLATE='en_US.UTF-8' LC_CTYPE='en_US.UTF-8';
         CREATE USER datastorerw WITH ENCRYPTED PASSWORD 'datastorerw';
         GRANT ALL PRIVILEGES ON DATABASE datastore_default TO datastorerw;
+
+        CREATE DATABASE superset WITH ENCODING 'UTF8' LC_COLLATE='en_US.UTF-8' LC_CTYPE='en_US.UTF-8';
+        CREATE USER superset WITH ENCRYPTED PASSWORD 'superset';
+        GRANT ALL PRIVILEGES ON DATABASE superset TO superset;
       EOF
     
